<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Streamlane</string>
    <!-- onBoarding text-->
    <string name="slide_heading1">How It Works</string>
    <string name="slide_heading2">How It Will Be Helpful For You</string>
    <string name="slide_heading3">Our Customers And Garages</string>
    <string name="slide_heading4"><br>Discover Mechanic </br>
        <br>Nearby You</br></string>

    <string name="slide_Button">Get Started</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_phone">We need to verify your phone</string>
    <string name="verify_Number">Verify Number</string>
    <string name="number">We have sent you an SMS with a code to number +971 2 xxxxxxx</string>
    <string name="resend_otp">Didn`t receive the OTP?</string>

    <string name="slide_description1"><br> Looking for a garage you can trust for a auto \n</br>
        <br>service or car repair? Using the Streamlane, \n</br>
        <br>you can find a garage near you.</br></string>

    <string name="slide_description2"><br>Lorem ipsum dolor sit amet, consectetur \n</br>
    <br>adipiscing elit. Maecenas suscipit iaculis \n</br>
    <br>ullamcorper. Morbi ac mauris eleifend, \n</br>
    <br>pretium ut, hendrerit lacus Vestibulum</br></string>

    <string name="slide_description4"><br>Looking for a garage you can trust for a auto \n</br>
        <br>service or car repair? Using the Streamlane, \n</br>
        <br> you can find a garage near you.</br></string>

    <string name="slide_description3"><br>Lorem ipsum dolor sit amet, consectetur \n</br>
        <br>adipiscing elit. Maecenas suscipit iaculis \n</br>
        <br>ullamcorper. Morbi ac mauris eleifend, \n</br>
        <br>pretium ut, hendrerit lacus Vestibulum</br></string>


    <string name="otp_heading">Enter your phone number</string>
    <string name="otp_desc">Please enter your mobile number.You will receive a code to verify mobile number.</string>

    <!-- New Account -->
    <string name="skip">Skip</string>
    <string name="create_account">Create New Account</string>
    <string name="add_profile">Add profile image</string>
    <string name="account_desc"><br>Join the community of over one\n</br> million people</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="terms">By clicking Sign up you agree to our Terms and Conditions</string>
    <string name="create_password">Create Your Password</string>
    <string name="Confirm_btn">Confirm</string>
    <!-- Login-->
    <string name="sign_in">Sign In</string>
    <string name="email_mobile">E-Mail or Mobile</string>
    <string name="Log_in_btn">Log-in</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="notification">Notification</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="home">Home</string>

    <!--password verification-->
    <string name="choose_verification">Choose verification type</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>
    <string name="go_back">←Go back</string>
    <string name="username">John Doe</string>
    <string name="userprofile_email">johndoe@example.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--profile-->
    <string name="message_link">Message</string>
    <string name="payment_method">Payment Method</string>
    <string name="profile">Profile</string>
    <string name="about_streamlan">About Streamlan</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <!-- drop down menu -->

    <string-array name="prefer_hours">
        <item>Morning</item>
        <item>Evening</item>
        <item>Both</item>
    </string-array>


    <string name="searchbar">Search</string>
    <string name="choose_service">Choose Service</string>
    <string name="choose_type_service">Choose type of service you are looking for</string>
    <string name="continue_btn">Continue</string>
    <string name="brake_service_S">Brake Service</string>
    <string name="engine_S">Engine</string>
    <string name="maintenance_schedule_S">Maintenance Schedule</string>
    <string name="oil_and_filter_S">Oil and Filter service</string>
    <string name="others">Others</string>
    <string name="synthetic_oil">Synthetic Oil</string>
    <string name="synthetic_blend">Synthetic Blend Oil</string>
    <string name="electronics">Electronics</string>
    <string name="service_summary">Service Summary</string>
    <string name="bmw_x5">BMW x5</string>
    <string name="_625fedf66a80">625fedf66a80</string>
    <string name="quota_submitted">Quote Submitted</string>
    <string name="quota_submitted_desc"><br>Your service quote is submitted \n</br>
        <br>successfully! Veiw service quotes \n</br>from providers</string>
    <string name="view_quotes">View Quotes</string>
    <string name="services_requested">Services Requested</string>
    <string name="oil_and_filter_servicess">Oil and Filter service - Synthetic Engine Oil</string>
    <string name="add_additional_service">Add additional service</string>
    <string name="location_ss">Location</string>
    <string name="location_addres_tem">21, Alex Davidson Avenue, Opposite Omegatron, Vicent Smith Quarters, UAE</string>
    <string name="change_location">Change Location</string>
    <string name="note">Note</string>
    <string name="preferred_date_range">Preferred date Range</string>
    <string name="preferred_hours">Preferred Hours</string>
    <string name="request_quote">Request Quote</string>
    <string name="select_your_vehicle_s_make">Select your vehicle\'s make</string>
    <string name="select_your_vehicle_s_trim">Select your vehicle\'s trim</string>
    <string name="basic_informations">Basic Informations</string>
    <string name="basic_info_desc">Gresasy Elbo Auto Repair has been the leader in automotive repair in the Triad area for twenty years. continuing the outstanding level of service Triad area residents expect from our</string>
    <string name="aminities">Aminities</string>
    <string name="_24_7_service">24/7 Service</string>
    <string name="wifi">Wifi</string>
    <string name="warranties_and_certifications">Warranties and Certifications</string>
    <string name="warranty">Warranty</string>
    <string name="address_warranty">12 mth/12K mi. ( whichever comes first) for parts and labour</string>
    <string name="review_desc">Simply dummy text of the printing and typeset industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</string>
    <string name="business_hours_g">Business Hours</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="book_services">Book Services</string>
    <string name="let_s_start">Let`s Start</string>
    <string name="start_button">Get Started</string>
    <string name="request_diagnosis_desc"><br>Your diagnose request is submitted\n</br><br> successfully! View quotes\n</br> from provider</string>
    <string name="view_diagnosis_quotes">View Diagnosis Quotes</string>
    <string name="view_history">View History</string>
    <string name="view_history_desc"><br>Your service quote has been saved\n</br><br> in services history. You can view it\n</br> again in completed history tab.</string>
    <string name="your_service_is_scheduled_yo">Your service is scheduled you will \nreceive confirmation email.</string>


    <array name="initial_slider_values">
        <item>500.0</item>
        <item>1500.0</item>
    </array>

    <array name="initial_slider_distance">
        <item>3.0</item>
        <item>75.0</item>
    </array>

</resources>