<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_man"
    tools:context=".common.GetStarted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:text="@string/slide_heading4"
            android:fontFamily="@font/hk_grotesk_bold"
            android:textAlignment="textStart"
            android:textSize="37sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hk_grotesk_medium"
            android:text="@string/slide_description4"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/get_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/start_button"
            android:textAllCaps="false"
            android:fontFamily="@font/dm_sans_bold"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>



</RelativeLayout>