<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.Login">


    <ImageView
        android:id="@+id/logo_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/logo_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_password_tx"
        android:layout_below="@id/logo_black"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/hk_grotesk_bold"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_password_tx"
        android:hint="@string/email_mobile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hk_grotesk_semi_bold"
            android:id="@+id/password_ET"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_password_ET"
            android:fontFamily="@font/hk_grotesk_semi_bold"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/hk_grotesk_semi_bold"
        android:background="@drawable/rounded"
        android:text="@string/Log_in_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:onClick="callToPassVerification"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/hk_grotesk_regular"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textSize="22dp"
        android:textColor="@color/Back_color"
        android:text="@string/forget_password"
        android:textAlignment="center" />

</RelativeLayout>