<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.OTP_Screen"
    android:background="@drawable/otp_background">


       <LinearLayout
           android:id="@+id/linear_otp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:background="@drawable/bottomsheet"
           android:backgroundTint="@color/white"
           android:layout_alignParentEnd="true"
           android:paddingBottom="10dp"
           android:layout_alignParentBottom="true"
           android:gravity="center"
           android:orientation="vertical">

           <TextView
               android:id="@+id/textView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/hk_grotesk_bold"
               android:text="@string/otp_heading"
               android:textColor="@color/black"
               android:textSize="26sp"
               tools:ignore="MissingConstraints" />

           <TextView
               android:id="@+id/textView2"
               android:layout_width="313dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="5dp"
               android:layout_marginEnd="30dp"
               android:layout_marginBottom="10dp"
               android:gravity="center"
               android:fontFamily="@font/hk_grotesk_regular"
               android:padding="5dp"
               android:text="@string/otp_desc"
               android:textAlignment="gravity"
               android:textColor="@color/black"
               android:textSize="18sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.9"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView" />


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/round_border"
               android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="3dp"
                   android:fontFamily="@font/dm_sans_regular"
                   android:text="Phone Number"
                   android:textColor="@color/black"
                   android:textSize="18sp" />

               <LinearLayout
                   android:id="@+id/linear1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:padding="3dp">

                   <com.hbb20.CountryCodePicker
                       android:id="@+id/country_code_picker"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="0dp"
                       app:ccp_autoDetectCountry="true"
                       app:ccp_showFlag="true"
                       app:ccp_showFullName="false"
                       app:ccp_showNameCode="false" />

                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="267dp"
                       android:layout_height="match_parent"
                       android:textCursorDrawable="@drawable/style_cursur"
                       android:background="@null"
                       android:fontFamily="@font/dm_sans_regular"
                       android:hint="333-1234567" />
               </LinearLayout>

           </LinearLayout>
           <Button
               android:id="@+id/get_otp_btn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="20dp"
               android:padding="17dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/rounded"
               android:fontFamily="@font/hk_grotesk_semi_bold"
               android:text="@string/get_otp"
               android:textAllCaps="false"
               android:textColor="@color/white"
               android:textSize="19sp" />

       </LinearLayout>
</RelativeLayout>